# ROVPS_ws

./: .gitignore  README.md  YHoutdoor_1.csv  YHoutdoor_2.csv  map.yaml
results/: Carto3_pc.pgm  Carto3_pc.yaml  Carto3_scan.pgm  Carto3_scan.yaml  Carto3_trajectory.txt  map1.pgm  map1.yaml  map2.pgm  map2.yaml  map20240618.pgm  map20240618.yaml  my_map.pbstream  my_map.pgm  my_map.yaml
results/carto2/: map_carto2.pgm  map_carto2.yaml  map_carto2_scan.pgm  map_carto2_scan.yaml  trajectory_carto2.txt  trajectory_carto2_scan.txt
script/: README.md  rosbag_to_csv.py
script/Carto_1/: output.csv
src/camera/: CMakeLists.txt  package.xml
src/camera/src/: rtspCamera.cpp
src/cirs_girona_cala_viuda/: CMakeLists.txt  cirs_girona_cala_viuda.md  package.xml
src/cirs_girona_cala_viuda/launch/: cirs_girona_cala_viuda_static_tf.launch.py
src/cirs_girona_cala_viuda/src/: adis_imu_process.cpp  depth_process.cpp  dvl_process.cpp
src/mbs/: CMakeLists.txt
src/mbs/src/: m750d_ping_to_pointcloud.cpp  m750d_save_ping.cpp
src/motion_ctl_simu/: CMakeLists.txt  package.xml
src/motion_ctl_simu/src/: ctl_simu.cpp
src/msis/: CMakeLists.txt
src/msis/config/: sts1000_dc.yaml
src/msis/launch/: sts1000_start.launch.py
src/msis/src/: define_sts1000.cpp  sts1000_dc.cpp  sts1000_ping_to_pointcloud.cpp  sts1000_ping_to_pointcloud_cirs.cpp  test_node.cpp
src/obstacle_detection/: CMakeLists.txt  package.xml
src/rov_tf/: CMakeLists.txt  package.xml
src/uvbot_automation/: CMakeLists.txt  package.xml  uvbot_automation.md
src/uvbot_automation/config/: odometry_ekf.yaml  odometry_wharf.yaml
src/uvbot_automation/launch/: robot_location_ekf.launch.py  robot_location_ekf_cirs.launch.py  robot_location_ekf_wharf.launch.py
src/uvbot_automation/src/: carto_odometer.cpp  carto_odometer2.cpp  carto_odometer_speed.cpp  cmdTransmit.cpp  demo.cpp
src/uvbot_cartographer/: CMakeLists.txt  package.xml  uvbot_cartographer.md
src/uvbot_demo/: package.xml  setup.cfg  setup.py
src/uvbot_navigation2/: CMakeLists.txt  package.xml  uvbot_navigation2.md
(+34 files in other folders)
